# chariot-engine

./: .gitignore  PROGRESS.md  README.md  chariot_engine_architecture.py  requirements.txt  setup.py
configs/: config.md  config_generate_users.json  config_loop_matching.json  config_run_periodic.json  config_simulate_trades.json  config_simulate_trades_alt.json  temp_config.json
docs/: configuration.md
rust_components/: Cargo.toml  README.md
rust_components/examples/: graph_matching_example.rs
rust_components/src/: lib.rs
rust_components/src/graph_matching/: mod.rs  types.rs
seed_catalogs_w/: watch_catalog.csv
src/: __init__.py  config.py  generate_users.py  inspect_catalog.py  loop_matching.py  loop_visuals.py  match_trades.py  run_periodic_simulation.py  show_watch_attributes.py  simulate_trades.py  trade_analytics.py  trade_validation.py
src/alternatives/: __init__.py  end_state_tracking.py  generate_watch_catalog.py  simulate_trades_alt.py  simulate_trades_streamlit.py  trade_prioritization.py  user_decision_model.py  user_preferences.py  watch_attributes.py
src/web/: streamlit_app.py
src_legacy/: app.py  chariot_engine_architecture.py  generate_sample_users.py  loop_export.py  loop_matching.py  loop_visuals.py  run_full_sim.py  run_simulation.py  simulate_round.py
src_rust/: benchmark.py  run_periodic_simulation_rust.py
templates/: index.html
