[package]
name = "chariot_engine_core"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "Core components for Chariot Engine trading system"

[lib]
name = "chariot_engine_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"
proptest = "1.2"

[features]
default = ["python"]
python = ["pyo3"]

[dependencies.pyo3]
version = "0.19"
features = ["extension-module"]
optional = true 